--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <section id="nav-image"> <!-- Id på section för justera bilden med custom css -->        
             <div class="container">
                 <div class="row">                 
-                <img src="img/nav-image.jpg" alt="" class="img-fluid">                                                               
+                <img src="nav-image.jpg" alt="" class="img-fluid">                                                               
               </div>
             </div>  
             <div class="py-5"></div>   <!-- Separerings div som ökar höjden på y-ledet. -->                  
